--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <h1>我叫陈阳.</h1>
-    <p>我的学号是18002090105<span id="studentnumber">2012020045</span>
+    <p>我的学号是<span id="studentnumber">18002090105</span>
     </p>
 
 </body>
