--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <p>我的学号是<span id="studentnumber">18002090105</span>
     </p>
     <img src="matrix.png">
+    <img src="timg.jpg" id="logo">
 </body>
 </html>
