--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <html>
 <body>
-<h1>我叫<span id="myname"></span></h1>
-    <p>我的学号是<span id="mynumber"></span>
-    </p>
+<h1><span id="myname"></span></h1>
+
+<a id="btn" href="login.html">登陆</a>
+     <p>我的学号是<span id="mynumber"></span>
+    </p> 
     <img src="matrix.png">
-    <img src="timg.jpg" id="logo" style="border-radius: 10px 20px 40px 80px" >
+    <img src="timg.jpg" id="logo" style="border-radius: 10px 20px 40px 80px" > 
     <script src="jquery-3.4.1.js"></script>
     <script>
         $(function(){
-            $.get("./data.json",function(result){
-                $("#myname").text(result.myname);
-                $("#mynumber").text(result.mynumber);
-            })
+          var callback=function(result){
+              $("#myname").text(result.myname);
+              $("#mynumber").text(result.mynumber);
+          }
+          $.ajax({
+              type:"POST",
+              xhrFields:{
+                  withCredentials:true
+              },
+              url:"http://10.30.201.71:8585/data.json",
+              contentType:"application/json",
+              data:JSON.stringify({"stunumber":"18002090105"}),
+              success:callback,
+          });
         })
+       
+        
     </script>
 </body>
 </html>
