--- a/login.html
+++ b/login.html
@@ -1,33 +1,34 @@
 <html>
 <body>
-<h1><span id="myname"></span></h1>
-<p>用户名<input id="number" type="text"></p>
-<p>密码<input id="password" type="password"></p>
-<button id="btn">登陆</button>
-<script src="jquery-3.4.1.js"></script>
-<script>
-$(function(){
-    $("#btn").click(function(){
+    <p>用户名<INPUT id="number" type="text" />
+    </p>
+    <p>密码<INPUT id="password" type="password" />
+    </p>
+    <button id="btn">登陆</button>
+    <script src="jquery-3.4.1.js"></script>
+    <script>
+        $(function(){
+            $("#btn").click(function(){
      
-        $.ajax({
-            type:"POST",
-            xhrFields:{
-                withCredentials:true
-            },
-            url:"http://127.0.0.1:8585/login",
-            contentType:"application/json",
-            data:JSON.stringify({number:$("#number").val(),
-                password:$("#password").val()
-         })
-            ,success:function(result){
-                if(result.result=='success'){
-                    location.href='index.html';
+                    
+                $.ajax({
+                    type:"POST",
+                    xhrFields: {
+                        withCredentials: true
+                    },
+                    url:"http://127.0.0.1:8585/login",
+                    contentType:"application/json",
+                    data:JSON.stringify({number:$("#number").val(),
+                            password:$("#password").val()
+                    })
+                    ,success:function(result){
+                    if(result.result=='success'){
+                        location.href='index.html';
+                    }
                 }
-            }
-        });
-    });
-})
-
-</script>
+             });
+            });
+        })
+    </script>
 </body>
 </html>
